# llm-1minai

./: .gitignore  CHANGELOG.md  DEBUG_USAGE.md  HELP_TEXT_SUMMARY.md  MODEL_SELECTION.md  README.md  TESTING.md  compare_models.sh  demo_debug.sh  llm_1min.py  manage_conversations.py  pyproject.toml  test_api.py  test_web_search_real.py
.github/workflows/: lint.yml  mirror.yml  publish.yml  security.yml  test.yml
docs/superpowers/specs/: 2026-05-06-omi-go-cli-design.md
tests/: conftest.py  test_attachments.py  test_cli_commands.py  test_debug_option.py  test_integration.py  test_model_execution.py  test_options_config.py  test_register_models.py  test_streaming.py  test_web_search_config.py  test_web_search_debug.py
tests/fixtures/: sample_responses.json
