[project]
name = "llm-1min"
version = "0.2.0"
description = "LLM plugin providing access to 66+ AI models through 1min.ai API with web search, mixed context, and persistent options"
readme = "README.md"
authors = [{name = "gl0bal01"}]
license = "Apache-2.0"
keywords = ["llm", "ai", "1min.ai", "gpt", "claude", "gemini", "chatgpt", "anthropic", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "llm>=0.13",
    "requests>=2.31.0",
    "click>=8.0"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/gl0bal01/llm-1min"
Repository = "https://github.com/gl0bal01/llm-1min"
Documentation = "https://github.com/gl0bal01/llm-1min#readme"
Changelog = "https://github.com/gl0bal01/llm-1min/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/gl0bal01/llm-1min/issues"
"1min.ai" = "https://docs.1min.ai"

[project.entry-points.llm]
1min = "llm_1min"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["llm_1min"]
